--- a/annotation/manzai/templates/index.html
+++ b/annotation/manzai/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>漫才アノテーション</h1>
+    <h1>漫才アノテーションツール</h1>
     <form class="form-group"  method="POST">
         {{ form.hidden_tag() }}
         <div class="form-group">
